# nanobot-skills

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
digest-tracker/: SKILL.md  run.py
github-watcher/: SKILL.md
github-watcher/assets/: watched-repos.txt
github-watcher/scripts/: add_repo.py  list_repos.py  release_notes.py  remove_repo.py
lobster-py/: .gitignore  AGENTS.md  SKILL.md
lobster-py/examples/: basic-workflow.yml
lobster-py/lobster/: __init__.py  gate.py  state.py  workflow.py
lobster-py/lobster/actions/: __init__.py  core.py
lobster-py/tests/: test_workflow.py
x-gif-maker/: README.md  SKILL.md  requirements.txt  setup.py
x-gif-maker/examples/: batch.json
x-gif-maker/references/: styles.md  templates.md
x-gif-maker/scripts/: create_gif.py  create_slideshow.py  create_slideshow_fast.py
x-gif-maker/tests/: test_gif_maker.py
x-poster/: SKILL.md  __init__.py  poster.py  test.py
xpost/: SKILL.md
xpost/references/: examples.md  hooks.md  templates.md
youtube-recommender/: README.md  SKILL.md  __init__.py  test_youtube_recommender.py  youtube_recommender.py
youtube-recommender/scripts/: test_api.py
zai-quota/: .gitignore  README.md  SKILL.md  __init__.py  pyproject.toml
zai-quota/zai_quota/: __init__.py
