[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zai-quota"
version = "1.1.0"
description = "Check Z.AI Coding Plan usage statistics with real-time quota monitoring"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "nanobot", email = "nanobot@example.com"}
]
keywords = ["zai", "quota", "usage", "monitoring", "glm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/CCAgentOrg/zai-quota"
Repository = "https://github.com/CCAgentOrg/zai-quota"
Issues = "https://github.com/CCAgentOrg/zai-quota/issues"

[tool.setuptools]
packages = ["zai_quota"]

[tool.setuptools.package-data]
zai_quota = ["SKILL.md", "README.md"]

[project.scripts]
zai-quota = "zai_quota:cli_main"
